# notebook

./: .gitignore  SMSPricing.csv  a.ipynb  commit.ps1  commit.sh  dice.py  dice2.py  dicepool.ipynb  dl.py  ecs.py  ecs_storage.py  iana-tags.ipynb  iana_tz.py  kmean1d.ipynb  learn_normalization.ipynb  load_mtg_csv.py  mtg_bulk_data.py  mtg_classification.ipynb  mtg_data.py  mtg_index.ipynb  mtg_kind_classification.ipynb  mtg_load.py  mtg_oracle_text.ipynb  mtg_processing.ipynb  mtg_to_csv.py  plaintext.ipynb  pyproject.toml  quicksearch.html  test.ipynb  twilio_sms.ipynb  vec.py
